--- a/app/src/labo/res/values/strings.xml
+++ b/app/src/labo/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Stage Music Player</string>
+    <string name="app_name">LABO Stage Music Player</string>
 </resources>
